0001209: Change the Word 'Radius' for Chamfering

--- a/src/Mod/Part/Gui/DlgFilletEdges.ui
+++ b/src/Mod/Part/Gui/DlgFilletEdges.ui
@@ -91,7 +91,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QLabel" name="label_2">
+         <widget class="QLabel" name="labelRadius">
           <property name="text">
            <string>Radius:</string>
           </property>
