Nicer more informative Isostatic dialog

--- a/src/Mod/Machining_Distortion/Isostatic.ui
+++ b/src/Mod/Machining_Distortion/Isostatic.ui
@@ -7,30 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>228</width>
-    <height>42</height>
+    <height>227</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Isostatic Plane</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QFormLayout" name="formLayout">
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string>Size:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit_InfoNodes">
-       <property name="readOnly">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <widget class="QTextEdit" name="textEdit">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
