--- a/src/Mod/Fem/MechanicalMaterial.ui
+++ b/src/Mod/Fem/MechanicalMaterial.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Mechanical material</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -81,7 +81,7 @@
      <item row="1" column="1">
       <widget class="QLabel" name="label_6">
        <property name="text">
-        <string>Young Modulus (KPa)</string>
+        <string>Young Modulus (kPa)</string>
        </property>
       </widget>
      </item>
