--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -53,7 +53,9 @@
         <file>window-new.svg</file>
         <file>camera-photo.svg</file>
         <file>applications-accessories.svg</file>
+        <file>applications-python.svg</file>
         <file>accessories-text-editor.svg</file>
+        <file>internet-web-browser.svg</file>
         <file>view-unselectable.svg</file>
         <file>view-refresh.svg</file>
         <file>view-fullscreen.svg</file>
