--- a/src/Mod/Part/Gui/DlgSettingsGeneral.ui
+++ b/src/Mod/Part/Gui/DlgSettingsGeneral.ui
@@ -19,7 +19,7 @@
      <property name="title">
       <string>Export</string>
      </property>
-     <layout class="QGridLayout">
+     <layout class="QGridLayout" name="gridLayout_1">
       <property name="margin">
        <number>9</number>
       </property>
